Fixed home page links spacing

--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,10 @@ nav {
 .links {
   /* border: 2px solid red; */
   margin-top: 11px;
+
+  display:flex;
+  justify-content: flex-end;
+  gap: 10px;
 }
 
 .linksflex {
@@ -96,6 +100,10 @@ p {
 }
 
 .link {
+}
+
+.link.right{
+  margin-right:20px;
 }
 
 .link.link-white {
